--- a/apps/choreui/src/app/app.component.html
+++ b/apps/choreui/src/app/app.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="row h-25">
     <div class="col text-center">
-      <button class="btn btn-primary w-50 h-100"><h1>Chore Me!</h1></button>      
+      <button class="btn btn-primary w-50 h-100" (click)="ChoreMe()"><h1>Chore Me!</h1></button>      
     </div>
   </div>
 
